Logo color switch bag fix

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -8,7 +8,7 @@
 $current-bgc: $light-bgc;
 $current-txt-color: $dark-txt;
 
-main {
+body {
   background-color: $current-bgc;
   color: $current-txt-color;
 }
@@ -19,20 +19,35 @@ main {
     $current-txt-color: $light-txt;
     background-color: $current-bgc;
     color: $current-txt-color;
+    .main-logo {
+      path {
+        fill: $current-txt-color;
+      }
+    }
   }
   &--light {
     $current-bgc: $light-bgc;
     $current-txt-color: $dark-txt;
     background-color: $current-bgc;
     color: $current-txt-color;
+    .main-logo {
+      path {
+        fill: $current-txt-color;
+      }
+    }
   }
 }
 
 @media (prefers-color-scheme: dark) {
   $current-bgc: $dark-bgc;
   $current-txt-color: $light-txt;
-  main {
+  body {
     background-color: $current-bgc;
     color: $current-txt-color;
+  }
+  .main-logo {
+    path {
+      fill: $current-txt-color;
+    }
   }
 }
