Home component is done

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,11 +1,13 @@
 $dark-blue: #121826;
 $black: #000000;
+$light-gray: #e2e4e8;
+$gray-bgc: #212936;
 $white: #ffffff;
 
 $light-bgc: $white;
 $dark-bgc: $dark-blue;
 
-$light-txt: $white;
+$light-txt: $light-gray;
 $dark-txt: $dark-blue;
 
 $container-width: 90%;
