--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -5,49 +5,50 @@
 @import "./variables";
 @import "./libs/normalize";
 
-$current-bgc: $light-bgc;
-$current-txt-color: $dark-txt;
-
+html,
 body {
-  background-color: $current-bgc;
-  color: $current-txt-color;
+  min-height: 100%;
+  height: 100%;
+}
+
+main {
+  height: calc(100% - 7rem);
 }
 
 .theme {
   &--dark {
-    $current-bgc: $dark-bgc;
-    $current-txt-color: $light-txt;
-    background-color: $current-bgc;
-    color: $current-txt-color;
+    background-color: $dark-bgc;
+    color: $light-txt;
+    h1,
+    p,
+    a {
+      color: $light-txt;
+    }
+    input {
+      background-color: $gray-bgc;
+    }
     .main-logo {
       path {
-        fill: $current-txt-color;
+        fill: $light-txt;
       }
     }
   }
   &--light {
-    $current-bgc: $light-bgc;
-    $current-txt-color: $dark-txt;
-    background-color: $current-bgc;
-    color: $current-txt-color;
+    background-color: $light-bgc;
+    color: $dark-txt;
+    h1,
+    p,
+    a {
+      color: $dark-txt;
+    }
     .main-logo {
       path {
-        fill: $current-txt-color;
+        fill: $dark-txt;
       }
     }
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  $current-bgc: $dark-bgc;
-  $current-txt-color: $light-txt;
-  body {
-    background-color: $current-bgc;
-    color: $current-txt-color;
-  }
-  .main-logo {
-    path {
-      fill: $current-txt-color;
-    }
-  }
+.active-link--dark {
+  background-color: $gray-bgc;
 }
